...
                                </menu>
                            </menuItem>
                            <menuItem title="Window" id="aUF-d1-5bR">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="Window" systemMenu="window" id="Td7-aD-5lo">
...
        <scene sceneID="hIz-AP-VOD">
            <objects>
                <viewController title="Account Controller" id="XfG-lQ-9wD" customClass="AccountController" customModule="atlas" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl">
                        <rect key="frame" x="0.0" y="0.0" width="400" height="314"/>
...
                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ptI-0m-CvQ">
                                <rect key="frame" x="132" y="258" width="137" height="36"/>
                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Welcome!" id="eVp-rQ-JYx">
                                    <font key="font" metaFont="system" size="30"/>
                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
...
                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ddw-Vf-0OU">
                                        <rect key="frame" x="-2" y="86" width="230" height="17"/>
                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Please enter your GitHub credentials:" id="ahH-6k-iVa">
                                            <font key="font" metaFont="system"/>
                                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
...
                                    <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="XIW-eE-g3v" userLabel="Username">
                                        <rect key="frame" x="0.0" y="56" width="360" height="22"/>
                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" placeholderString="GitHub Username" drawsBackground="YES" id="tdv-dm-O11">
                                            <font key="font" metaFont="system"/>
                                            <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
...
                                    <secureTextField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="7Lf-oO-PYc" userLabel="Password">
                                        <rect key="frame" x="0.0" y="26" width="360" height="22"/>
                                        <secureTextFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="GitHub Password" drawsBackground="YES" usesSingleLineMode="YES" id="twP-7O-fpI">
                                            <font key="font" metaFont="system"/>
                                            <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
...
                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="NUf-yU-gZe">
                                        <rect key="frame" x="0.0" y="-1" width="42" height="19"/>
                                        <buttonCell key="cell" type="roundRect" title="Save" bezelStyle="roundedRect" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="4oT-MZ-XJY">
                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                            <font key="font" metaFont="cellTitle"/>
...
                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="sop-kY-DiL" userLabel="Add Text Button">
                                        <rect key="frame" x="-6" y="-7" width="94" height="32"/>
                                        <buttonCell key="cell" type="push" title="Add Text" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="vw3-du-gDG">
                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                            <font key="font" metaFont="system"/>
...
                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                            <subviews>
                                                <textView identifier="commit" importsGraphics="NO" verticallyResizable="YES" usesFontPanel="YES" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" usesRuler="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" spellingCorrection="YES" smartInsertDelete="YES" id="Ks0-AI-i51">
                                                    <rect key="frame" x="0.0" y="0.0" width="224" height="283"/>
                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
...
                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="PZF-1M-Yqi" userLabel="Commit Button">
                                        <rect key="frame" x="-6" y="-7" width="253" height="32"/>
                                        <buttonCell key="cell" type="push" title="Commit" bezelStyle="rounded" alignment="center" enabled="NO" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="W8Y-tf-GJR">
                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                            <font key="font" metaFont="system"/>
...
                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                    <subviews>
                                        <textView identifier="terminal" importsGraphics="NO" verticallyResizable="YES" usesFontPanel="YES" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" usesRuler="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" linkDetection="YES" dashSubstitution="YES" spellingCorrection="YES" smartInsertDelete="YES" id="4PL-mV-j01">
                                            <rect key="frame" x="0.0" y="0.0" width="224" height="598"/>
                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
...
                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="aF3-SM-5vE">
                                <rect key="frame" x="-2" y="263" width="454" height="17"/>
                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="New Project" id="rs7-Nv-IdJ">
                                    <font key="font" metaFont="system"/>
                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
...
                                <rect key="frame" x="74" y="127" width="302" height="34"/>
