...
   
    override func viewDidLoad() {
        super.viewDidLoad()
        
        // Do any additional setup after loading the view.

        if ProcessInfo.processInfo.environment["TESTING"] != nil {
            Testing.setup()
        }
        
        terminal = Terminal(terminalView)
        
        Terminal.log("Welcome to Atlas!")
...
        FileSystem.createBaseDirectory()
        
        Terminal.log("Atlas Directory: \(FileSystem.baseDirectory().relativePath)")
        
        if let credentials = Git.getCredentials(FileSystem.baseDirectory()) {
            initGit(credentials)
            _ = projects?.create("General")
            updateProjects()
            selectProject("General")
        } else {
            performSegue(
                withIdentifier: NSStoryboardSegue.Identifier(rawValue: "account-modal"),
                sender: self
...
            }
            
            return projectViewItem
        }
        
        let item = collectionView.makeItem(
            withIdentifier: NSUserInterfaceItemIdentifier(rawValue: "StagedFileViewItem"),
            for: indexPath
        )
        guard let stagedFileViewItem = item as? StagedFileViewItem else {
            return item
        }
        
...
