...
}

class Git {
    
    static let credentialsFilename = "github.json"
    static let gitIgnore = [
        "DS_Store"
    ]
    
    var repositoryDirectory: URL
    var baseDirectory: URL
    var repositoryName: String
    
...
